chore: fix small issue with margin collapse

--- a/projects/kit/components/elastic-container/elastic-container.component.less
+++ b/projects/kit/components/elastic-container/elastic-container.component.less
@@ -5,3 +5,8 @@
     display: block;
     overflow: hidden;
 }
+
+.t-wrapper {
+    padding-top: 1px;
+    margin-top: -1px;
+}
